@@ -1,3 +1,6 @@
+2014-10-18  Kirit Saelensminde  <kirit@felspar.com>
+ Added a new test macro `FSL_CHECK_ERROR` that ensures that the error between two values (normally reals) is less than an error term.
+
 2014-09-07  Kirit Saelensminde  <kirit@felspar.com>
  The meta data set on the progress for a task is now made available to the meter readings.
  There is a new `fostlib::cli::monitor` function that can be used to display a progress bar monitoring work towards a future.
